syntax = "proto3";

package fields;

option java_multiple_files = true;
option java_package = "grpc.tour.fields";

message SubTourIdField {
  int32 value = 1;
}