syntax = "proto3";

package response;

option java_multiple_files = true;
option java_package = "grpc.tour.dto.response";

import "tour/dto/response/tour-response.proto";

message CheckTourByIdResponse {
  bool is_exists = 1;
  response.TourResponse tour = 2;
}