syntax = "proto3";

package request;

option java_multiple_files = true;
option java_package = "grpc.tour.dto.request";

import "tour/fields/subtour-id-field.proto";

message CheckSubTourByIdRequest {
  fields.SubTourIdField sub_tour_id = 1;
}